less birds mobile

--- a/indexless.html
+++ b/indexless.html
@@ -39,7 +39,7 @@ technology.</p>
     <script src="js/renderers/Projector.js"></script>
     <script src="js/renderers/CanvasRenderer.js"></script>
     <script src="js/objBird.js"></script>
-    <script src="birds.js"></script>
+    <script src="birdsless.js"></script>
     <script>
     </script>
 </body>
