one menu div for both

--- a/index.html
+++ b/index.html
@@ -34,24 +34,13 @@
 
 <div class="container">
 <!-- MENU ---------------------------------->
-<div id="divMobilemenu">
-    <ul id="mobileMenu">
-            <li><a data-scroll href="#threeCanvas">Home</a></li>
-            <li><a data-scroll href="#about">About</a></li>
-            <li><a data-scroll href="#services">Services</a></li>
-         <li><a data-scroll href="#work">Work</a></li>
-         <li><a data-scroll href="#contact">Contact</a></li>
-        </ul> 
-    </div>
+    
+<div id="myMenuDiv">
+    
+    </div>    
 
-    <div id="deskMenu">
-        <img src="img/logo.png" height="32" width="auto" /> 
-        &nbsp; &nbsp; &nbsp;
-        <button> <a data-scroll href="#contact"> Contact </a></button> 
-        &nbsp; &nbsp;
-        <button> <a data-scroll href="#work">Work </a></button> &nbsp; &nbsp;
-        <button> <a data-scroll href="#services">Services </a></button> &nbsp; &nbsp;
-        <button> <a data-scroll href="#about">About </a></button> &nbsp; &nbsp; </div>
+
+   
 <!-- PAGE ---------------------------------->
     <div id="afterBirds">
         <div class="row" id="maintitle"> Youssef Faltas
