--- a/index.html
+++ b/index.html
@@ -43,14 +43,20 @@
    
 <!-- PAGE ---------------------------------->
     <div id="afterBirds">
-        <div class="row" id="maintitle"> Youssef Faltas
-            <br /> <small> Creative Web Developer</small>
+        <div class="row" id="maintitle"> 
+            
+
+            Youssef Faltas
+<br /> <small> Creative Web Developer</small>
             <br /> </div>
         <div class="row" id="subtitle"> I design and develop simple clean responsive websites with a twist of creative coding
             <br />
             <br />
-            <a data-scroll href="#aboutLinks"> <img src="img/more.png" height="22" width="auto" /></a>
-            <br /> </div>
+            <a data-scroll href="#about"> <img id="downlink" src="img/more.png" height="22" width="auto" /></a>
+            <br /> 
+            
+
+        </div>
         <div class="row brightsection" id="about">
             <div class="two-thirds column">
                 <h2> hi, </h2>
