--- a/index.html
+++ b/index.html
@@ -68,12 +68,12 @@
             <center>
                 <br />
                 <br />
-                <a href="resume.pdf"> <img src="img/file-blue.png" width="27.5%" height="auto" onmouseover="this.src='img/file-orange.png'" onmouseout="this.src='img/file-blue.png'" />
+                <a href="Youssef-Faltas-CV.pdf"> <img src="img/file-blue.png" width="27.5%" height="auto" onmouseover="this.src='img/file-orange.png'" onmouseout="this.src='img/file-blue.png'" />
                     <br /> Resume </a>
                 <br />
                 <br />
                 <br />
-                <a href="http://github.com/faltastic"> <img src="img/github-blue.png" width="30%" height="auto" onmouseover="this.src='img/github-orange.png'" onmouseout="this.src='img/github-blue.png'" />
+                <a href="https://github.com/faltastic"> <img src="img/github-blue.png" width="30%" height="auto" onmouseover="this.src='img/github-orange.png'" onmouseout="this.src='img/github-blue.png'" />
                     <br /> Github </a>
             </center>
         </div>
