--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <div class="two-thirds column">
             <h2> hi, </h2>
             <p>I'm a freelance creative front‑end developer with 4+ years of professional experience, based in Prague. </p>
-            <p>I build rich web envirnoments using the most sophisticated technologies available today for fully interactive and responsive websites.</p>
+            <p>I build rich web environments using the most sophisticated technologies available today for fully interactive and responsive websites.</p>
             <p>I have worked on company websites, portfolios of visual artists, and data visualization projects. Each project is a process of building custom solutions to fit the goal at hand.</p>
         </div>
         <div class="one-third column" id="aboutLinks">
