--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <br />
         <div class="row">
             <div class="one-half column">
-                <center><a href="http://qamoosalthawra.com/index.html" target="_blank"> <img  src="img/sites/qamoos.png" width="75%" height="auto"></a>
+                <center><a href="http://qamosalthawra.com/index.html" target="_blank"> <img  src="img/sites/qamoos.png" width="75%" height="auto"></a>
                     <h5> A Dictionary of the Revolution</h5>
                     </center>
                     <p> Visualization of the inter-connections between new words that entered political dialogue following the January 2011 revolution in Egypt.</p>
