--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900" >-->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/faltas.css">
+    <link rel="stylesheet" href="css/faltas.min.css">
 
       <link rel="stylesheet" href="css/slicknav.css" />
     
@@ -521,7 +521,7 @@
 </script>
 
 
-<script src="birds.js"></script>
+<script src="birds.min.js"></script>
     
 </body>
 
