--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
     <div class="row brightsection" id="about">
         <div class="two-thirds column">
             <h2> hi, </h2>
-            <p>I'm a freelance creative front‑end developer with 4+ years of professional experience, based in Prague. </p>
-            <p>I build rich web environments using the most sophisticated technologies available today for fully interactive and responsive websites.</p>
+            <p>I'm a creative front‑end developer with 4+ years of professional experience, based in Prague. </p>
+            <p>I build rich web environments using the most sophisticated technologies available today for interactive and responsive websites.</p>
             <p>I have worked on company websites, portfolios of visual artists, and data visualization projects. Each project is a process of building custom solutions to fit the goal at hand.</p>
         </div>
         <div class="one-third column" id="aboutLinks">
@@ -101,8 +101,10 @@
 
 
             <br /><br /><br /><br /><br /><br /><br /><br /><br />
-            <p> My design practice is influenced by my work as a digital visual artist. When designing for the web, the two key elements I focus on are simplicity and the creation of an aesthetic that reflects the spirit of the project at hand.
+
+            <p> When designing for the web, the two key elements I focus on are simplicity and the creation of an aesthetic that reflects the spirit of the project at hand.
             </p>
+            <p> My user experience building practice is influenced by my experience as a digital visual artist and experimenting with various interaction possibilities. In each project, I hope to create an intuitive and original navigataion structure which all users would enjoy exploring. </p>
             <p>Tools I use</p> 
             <ul> 
                 <li> Pen and paper</li>
