--- a/index.html
+++ b/index.html
@@ -9,9 +9,8 @@
 <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900" >-->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/faltas.min.css">
-
-      <link rel="stylesheet" href="css/slicknav.css" />
+    <link rel="stylesheet" href="css/faltas.css">
+    <link rel="stylesheet" href="css/slicknav.css" />
     
     <script src="js/jquery.js"></script>
     <script src="js/jquery.slicknav.min.js"></script>
@@ -104,7 +103,7 @@
 
             <p> When designing for the web, the two key elements I focus on are simplicity and the creation of an aesthetic that reflects the spirit of the project at hand.
             </p>
-            <p> My user experience building practice is influenced by my experience as a digital visual artist and experimenting with various interaction possibilities. In each project, I hope to create an intuitive and original navigataion structure which all users would enjoy exploring. </p>
+            <p> My user experience building practice is influenced by my work as a digital artist and experimenting with various interaction possibilities. In each project, I hope to create an intuitive and original navigataion structure that all users would enjoy exploring. </p>
             <p>Tools I use</p> 
             <ul> 
                 <li> Pen and paper</li>
