new media artist link

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
 
             <p> When designing for the web, the two key elements I focus on are simplicity and the creation of an aesthetic that reflects the spirit of the project at hand.
             </p>
-            <p> My user experience building practice is influenced by my work as a digital artist and experimenting with various interaction possibilities. In each project, I hope to create an intuitive and original navigataion structure that all users would enjoy exploring. </p>
+            <p> My user experience building practice is influenced by my work as a <a  href="http://faltastico.tumblr.com/tagged/projects" target="_blank">new media artist</a> and experimenting with various interaction possibilities. In each project, I hope to create an intuitive and original navigataion structure that all users would enjoy exploring. </p>
             <p>Tools I use</p> 
             <ul> 
                 <li> Pen and paper</li>
