--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900" >-->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
-    <link rel="stylesheet" href="css/faltas.css">
+    <link rel="stylesheet" href="css/faltas.min.css">
     <link rel="stylesheet" href="css/slicknav.css" />
     
     <script src="js/jquery.js"></script>
@@ -34,7 +34,9 @@
 <div class="container">
 <!-- MENU ---------------------------------->
     
-<div id="myMenuDiv"></div>    
+<div id="myMenuDiv">
+
+</div>
 
 <!-- PAGE ---------------------------------->
 <div id="afterBirds">
