--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
         <div class="one-half column">
             <center>
                     <div class="one-half column">
-                        <img src="img/design.png" width="50%" height="auto"/>
+                        <img src="img/design.png" width="40%" height="auto"/>
                         <h5> Web Design </h5>
                     </div>
                     <div class="one-half column"> 
-                        <img src="img/interact.png" width="50%" height="auto"/>
+                        <img src="img/interact.png" width="40%" height="auto"/>
                         <h5> Interaction Design</h5>
                    </div>
             </center>
@@ -112,16 +112,17 @@
                 <li> Inkscape</li>
                 <li> Gimp</li>
             </ul>
+            <br /><br />
 
         </div>
         <div class="one-half column">
             <center>
                     <div class="one-half column">
-                        <img src="img/dev.png" width="50%" height="auto"/>
+                        <img src="img/dev.png" width="40%" height="auto"/>
                         <h5> Web Development </h5>
                     </div>
                     <div class="one-half column"> 
-                        <img src="img/dataviz.png" width="50%" height="auto"/>
+                        <img src="img/dataviz.png" width="40%" height="auto"/>
                         <h5> Data Visualization</h5>
                    </div>
             </center>
@@ -221,9 +222,10 @@
             <br />
             <br />
             <br /><br /><br />
-            <a href="https://www.behance.net/faltastic"><img src="img/behance-grey.png" onmouseover="this.src='img/behance-orange.png'" onmouseout="this.src='img/behance-grey.png'" /></a>&nbsp; &nbsp;&nbsp; 
-            <a href="https://twitter.com/Faltastico"><img src="img/twitter-grey.png" onmouseover="this.src='img/twitter-orange.png'" onmouseout="this.src='img/twitter-grey.png'"/></a>&nbsp; &nbsp;&nbsp;
             <a href="http://faltastico.tumblr.com/"><img src="img/tumblr-grey.png" onmouseover="this.src='img/tumblr-orange.png'" onmouseout="this.src='img/tumblr-grey.png'"/></a>&nbsp; &nbsp;&nbsp;
+            <a href="http://codepen.io/faltastic/"><img src="img/codepen-grey.png" onmouseover="this.src='img/codepen-orange.png'" onmouseout="this.src='img/codepen-grey.png'" /></a>&nbsp; &nbsp;&nbsp;
+            <a href="https://twitter.com/Faltastico"><img src="img/twitter-grey.png" onmouseover="this.src='img/twitter-orange.png'" onmouseout="this.src='img/twitter-grey.png'"/></a>
+
 
             <br /><br /> <br />
 
