--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 <!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900" >-->
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/skeleton.css">
+    <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/faltas.min.css">
-    <link rel="stylesheet" href="css/slicknav.css" />
+
     
     <script src="js/jquery.js"></script>
     <script src="js/jquery.slicknav.min.js"></script>
@@ -218,7 +219,8 @@
 
             <h3> Want to discuss your new project?</h3>
             <br />
-            <button id="talk"> Let's Talk</button>
+            <div id="talk"><a  href="mailto:youssef.faltas@gmail.com">Let's Talk</a>
+                </div>
             <br />
             <br />
             <br /><br /><br />
