--- a/index.html
+++ b/index.html
@@ -137,12 +137,13 @@
             <ul> 
                 <li> HTML5</li>
                 <li> CSS3</li>
-                <li> jQuery</li>
                 <li> Javascript 
                     <ul>
-                        <li> p5js</li>
-                        <li> D3</li>
-                        <li> threeJS</li>
+                        <li> jQuery</li>
+                        <li> p5. &nbsp; D3. &nbsp; Three</li>
+                        <li> Immutable</li>
+                        <li> Typescript</li>
+                        <li> Vue 2</li>
                     </ul>
                 </li>
                 <li>Git</li>
