--- a/aviana/wordpress.html
+++ b/aviana/wordpress.html
@@ -42,7 +42,7 @@
         </div>
     </div>
     <!-- SCRIPTS ---------------------------------->
-    <script src="lib/three.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/86/three.min.js"></script>
     <script src="lib/Projector.js"></script>
     <script src="lib/CanvasRenderer.js"></script>
 
