--- a/aviana/night.html
+++ b/aviana/night.html
@@ -26,10 +26,10 @@
         <div class="container">
             <div class="row">
                 <h5>  Aviana </h5>
-                <!--<div id="demo-menu"> -->
+               <!--
                 <a href="#morning" onclick="renderTime(8)">morning</a> &nbsp; &nbsp;
                 <a href="#evening" onclick="renderTime(18)">evening</a> &nbsp; &nbsp;
-<!--
+
                 <a href="#night" onclick="renderTime(23)">night</a> &nbsp;&nbsp;
                 <a href="#modal" onclick="disperseBirds()">disperse</a>
 
@@ -54,8 +54,9 @@
     <script src="lib/CanvasRenderer.js"></script>
     <script src="objBird.js"></script>
     <script src="dobri-den.js"></script>
+
+    <script>renderTime(23);</script>
     <script src="aviana-intro.js"></script>
-    <script></script>
 </body>
 
 </html>
