--- a/aviana/follow.html
+++ b/aviana/follow.html
@@ -27,14 +27,16 @@
             <div class="row">
                 <h5>  Aviana </h5>
                 <!--<div id="demo-menu"> -->
+<!--
                 <a href="#morning" onclick="renderTime(8)">morning</a> &nbsp; &nbsp;
                 <a href="#evening" onclick="renderTime(18)">evening</a> &nbsp; &nbsp;
 
                 <a href="#night" onclick="renderTime(23)">night</a>
-                <!-- &nbsp;&nbsp;
+                &nbsp;&nbsp;
+-->
                 <a href="#modal" onclick="disperseBirds()">disperse</a>
 
--->
+
             </div>
             <div class="row" id="good-something">
                 <h2>
@@ -55,7 +57,7 @@
     <script src="lib/CanvasRenderer.js"></script>
     <script src="objBird.js"></script>
     <script src="dobri-den.js"></script>
-    <script src="aviana-intro.js"></script>
+    <script src="aviana-intro-follow.js"></script>
     <script></script>
 </body>
 
