--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <link rel="stylesheet" href="css/slicknav.css">
     <link rel="stylesheet" href="css/faltas.min.css">
 
-    
     <script src="js/jquery.js"></script>
     <script src="js/jquery.slicknav.min.js"></script>
   
@@ -112,6 +111,7 @@
                 <li> Pen and paper</li>
                 <li> Inkscape</li>
                 <li> Gimp</li>
+                <li> Processing </li>
             </ul>
             <br /><br />
 
@@ -136,17 +136,18 @@
             <p>Tools I use</p> 
             <ul> 
                 <li> HTML5</li>
-                <li> CSS3</li>
+                <li> CSS / Sass</li>
                 <li> Javascript 
                     <ul>
                         <li> jQuery</li>
                         <li> p5. &nbsp; D3. &nbsp; Three</li>
-                        <li> Immutable</li>
-                        <li> Typescript</li>
-                        <li> Vue 2</li>
+                        <li> node / npm </li>
+                        <li> Gulp </li>
+                        <li> Vue</li>
                     </ul>
                 </li>
-                <li>Git</li>
+                <li> git </li>
+
             </ul>
 
 
@@ -228,7 +229,6 @@
             <a href="http://faltastico.tumblr.com/"><img src="img/tumblr-grey.png" onmouseover="this.src='img/tumblr-orange.png'" onmouseout="this.src='img/tumblr-grey.png'"/></a>&nbsp; &nbsp;&nbsp;
             <a href="http://codepen.io/faltastic/"><img src="img/codepen-grey.png" onmouseover="this.src='img/codepen-orange.png'" onmouseout="this.src='img/codepen-grey.png'" /></a>&nbsp; &nbsp;&nbsp;
             <a href="https://twitter.com/Faltastico"><img src="img/twitter-grey.png" onmouseover="this.src='img/twitter-orange.png'" onmouseout="this.src='img/twitter-grey.png'"/></a>
-
 
             <br /><br /> <br />
 
