--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             <center>
               <br />
               <br />
-              <a href="Youssef-Faltas-CV.pdf">
+              <a href="Youssef-Faltas-CV-2021.pdf">
                 <img
                   src="img/file-blue.png"
                   width="27.5%"
